# School

./: .clang-format  .gitignore  Actual CPU.circ  Alternator Center Ring.stl  Alternator Model.FCStd  BIG+CPU.circ  CONTRIBUTING.md  Hall effect things.FCStd  Hall effect things.FCStd1  Matrix Lib.depend  Matrix Lib.layout  Pipelined Cpu.circ  README.md  app  array+multiplication.t  bitmap.cpp  bitmap.h  example  example.cpp  example_alloc.hpp  index.js  linked_list.cpp  linked_list.h  main (1).c  main.c  main.cpp  matrix.cpp  matrix.h  neuralNet.h  neuralNetwork.cpp  neuralNetwork.h  new_out  nmlh_alloc.hpp  nmlh_dynamic_alloc.cpp  nmlh_dynamic_alloc.hpp  nmlh_dynamic_alloc_imp.hpp  nmlh_nn.cpp  nmlh_nn.h  out  out.txt  (+3 more)
2d square tester/: main.cpp
4_6/: assignment_4_6.docx  bruh.cpp  hangman.txt  main.cpp  message (1).cpp  message.txt  out.txt
Alternator/: Alternator Magnet Holder V1.FCStd  Alternator Magnet Holder V1.FCStd1  blankmetalmount.FCStd  blankmetalmount.FCStd1
Arduino/: Receiver.ino  Transmitter.ino  bluetoothAT09.ino
Assignment Code/: a1_1_standardForm.cpp  a1_2_wordShuffling.cpp  a1_3_trianglePaths.cpp  a1_4_infiniteSequence.py  a1_5_plusMinus.cpp  a1_6_primeSubsequence.cpp  a2_1_brackets.cpp  a2_4_completeSubtree.cpp  a2_5_oneMultiplication.py  a2_5_timeComplexity.py  bruh.py  graph5convert.txt  out  output.txt
Assignment1/: q4_5_6.c  q7.c
Assignment2/: q4.java
Blackjack/: StandStats.txt  (+7 more)
ENGG-1410/Template/src/: CMakeLists.txt  main.c
ENGG-1410/Template/src/include/: manip.h
Template/src/: CMakeLists.txt  main.c
Template/src/src/: manip.c
(+510 files in other folders)
